--- a/src/content/post/Life-Out-There.mdx
+++ b/src/content/post/Life-Out-There.mdx
@@ -52,7 +52,8 @@ The team now intends to conduct follow-up research with the telescope's MIRI (Mi
 "Our ultimate goal is the identification of life on a habitable exoplanet, which would transform our understanding of our place in the universe," concluded Madhusudhan. "Our findings are a promising step towards a deeper understanding of Hycean worlds in this quest."
 
 The James Webb Space Telescope is the world's premier space science observatory. Webb is solving mysteries in our solar system, looking beyond to distant worlds around other stars, and probing the mysterious structures and origins of our universe and our place in it. Webb is an international program led by NASA with its partners, ESA (European Space Agency) and the Canadian Space Agency.
-<img src='data:image/gif;base64,R0lGODlhAQABAIAAAAAAAP///yH5BAEAAAAALAAAAAABAAEAAAIBRAA7' class='cld-responsive' data-src='https://res.cloudinary.com/paulapplegate-com/image/upload/c_limit,dpr_auto,q_auto,w_auto/vieste_italy_fzd6ap.jpg.auto?_a=BAMHUyLRA'/>
+
+![Test](https://res.cloudinary.com/paulapplegate-com/image/upload/c_limit,dpr_auto,q_auto,w_auto/vieste_italy_fzd6ap.jpg.auto?_a=BAMHUyLRA)
 
 Media Contacts:
 
