--- a/src/content/post/Life-Out-There.mdx
+++ b/src/content/post/Life-Out-There.mdx
@@ -7,7 +7,7 @@ tags: ["NASA", "Life", "Maybe"]
 import { Image } from 'astro:assets';
 import methane from 'src/assets/Methane-Carbon-Dioxide-Atmosphere-K2-18-b.png';
 import exo from 'src/assets/EXOPLANET-K2-18-b.jpg';
-
+import bikes from 'src/assets/bikes.jpg';
 
 A rendering of what the exoplanet K2-18 b might look like.
 
@@ -53,6 +53,14 @@ The team now intends to conduct follow-up research with the telescope's MIRI (Mi
 
 The James Webb Space Telescope is the world's premier space science observatory. Webb is solving mysteries in our solar system, looking beyond to distant worlds around other stars, and probing the mysterious structures and origins of our universe and our place in it. Webb is an international program led by NASA with its partners, ESA (European Space Agency) and the Canadian Space Agency.
 
+<Image src={bikes} width={1600} height={1200} alt="Some Bikes" />
+
+<Image
+  src="https://cdn.shopify.com/static/sample-images/bath.jpeg"
+  width={800}
+  height={600}
+  alt="A lovely bath"
+/>
 
 Media Contacts:
 
