--- a/src/content/post/Life-Out-There.mdx
+++ b/src/content/post/Life-Out-There.mdx
@@ -56,10 +56,10 @@ The James Webb Space Telescope is the world's premier space science observatory.
 <Image src={bikes} width={1600} height={1200} alt="Some Bikes" />
 
 <Image
-  src="https://cdn.shopify.com/static/sample-images/bath.jpeg"
+  src="https://res.cloudinary.com/paulapplegate-com/image/upload/v1711839811/candy-eggs.jpg"
   width={800}
   height={600}
-  alt="A lovely bath"
+  alt="Yummy candy eggs"
 />
 
 Media Contacts:
