--- a/src/content/post/Life-Out-There.mdx
+++ b/src/content/post/Life-Out-There.mdx
@@ -3,6 +3,7 @@ title: "Life Out There"
 publishDate: "10 Oct 2023"
 description: "NASA and the search for life. The James Webb Space Telescope continues to impress."
 tags: ["NASA", "Life", "Maybe"]
+draft: false
 ---
 import { Image } from 'astro:assets';
 import methane from 'src/assets/Methane-Carbon-Dioxide-Atmosphere-K2-18-b.png';
